# metasystem

./: .gitignore  ANALIZA-TEKSTOWA-TRANSKRYPCJA.md  BENCHMARK-RESULTS-FINAL.md  BUGFIX-DECISIONS-UI.md  DETEKCJA-REKLAM-MANIPULACJI.md  DODAJ-KLUCZE-SUPABASE.md  EFEKTOR_IMPLEMENTATION_REPORT.md  ENV_SETUP.md  GEMINI-IMPLEMENTATION-REPORT.md  GEMINI-INTEGRATION-COMPLETE-REPORT.md  GEMINI-INTEGRATION-GUIDE.md  GEMINI-RUST-SUPABASE-INTEGRATION.md  GITHUB-ACTIONS-TEST.md  HOMEOSTAT_IMPLEMENTATION_SUMMARY.md  IMPLEMENTACJA-RECEPTOR-2.0-RAPORT.md  IMPLEMENTATION_LOG.md  INITIALIZATION_REPORT.md  INSTALACJA-SECURITY-LAYER-RAPORT.md  INSTRUKCJA-AKTUALIZACJI-BAZY-CLEAN.md  INSTRUKCJA-AKTUALIZACJI-BAZY.md  KONFIGURACJA-ENV.md  MODUL-DECYZYJNY-RAPORT.md  PROBLEM-HALLUCYNACJE-ROZWIAZANIE.md  QUICK_START.md  README-SECURITY.md  README.md  RECEPTOR-2.0-QUICK-START.md  RECEPTOR_IMPLEMENTATION_REPORT.md  RECEPTOR_IMPLEMENTATION_SUMMARY.md  ROZWIAZANIE-GOTOWE.md  RUST-WASM-BUILD-SUCCESS.md  RUST-WASM-INTEGRATION-COMPLETE.md  RUST-WASM-POC-RAPORT.md  SECURITY-LAYER-IMPLEMENTATION.md  SECURITY-LAYER-QUICK-START.md  START-TUTAJ.md  STRONA-GLOWNA-MINIMALISTYCZNA.md  STRUCTURE.md  SUPABASE_SETUP.md  TASK-1-DECISIONSIMULATOR-INTEGRATION.md  (+21 more)
.ai/: EFEKTOR.md  HOMEOSTAT.md  KORELATOR.md  KORELATOR_SEARCH_LOGIC.md  RECEPTOR.md  help-context.md  jk-metacybernetyka.doc  masterpropt.md
.github/: README.md  SETUP.md
src/lib/cybernetics/wasm_core/: BUILD-WSL-INSTRUCTIONS.md  Cargo.toml  benchmark.ts  bridge.ts  fallback.ts  test-import.ts
src/lib/cybernetics/wasm_core/src/: lib.rs
(+74 files in other folders)
